[package]
name = "crypto-com-exchange"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Websocket library for crypto com exchange https://exchange-docs.crypto.com/exchange/v1/rest-ws/index.html"


homepage = "hhttps://github.com/Adamko23/rs-crypto-com-exchange"
repository = "https://github.com/Adamko23/rs-crypto-com-exchange"
readme = "README.md"
keywords = ["websocket", "crypto", "api", "exchange"]
categories = ["api-bindings", "asynchronous", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures = "0.3.30"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "^1.0.120"
serde-aux = "4.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = { version = "0.4.38", features=["serde"]}
thiserror = "2.0.3"
env_logger = "0.11.5"
